# Modu

./: LICENSE  README.md  environment.yml  modu.py  modutorial.ipynb  pyproject.toml
src/: modu.py  modutorial.ipynb
